# analyze_my_chatgpt_history

./: .gitignore  README.md  pyproject.toml
chatgpt_analysis/: __init__.py  __main__.py  parser.py
